Update storage endpoints using the newest standard
